# Cpp_ImGui_Desktop

./: AdvCalc.hpp  Calender.cpp  Calender.hpp  Clock.cpp  CsvEditor.hpp  Diff.hpp  FileExplorer.hpp  OtherTopics.hpp  README.md  TextEditor.hpp  WindowBase.cpp  main.cpp
CppWebServer/: ByteCircularBuffer.cpp  ByteCircularBuffer.h  TcpClient.cpp  TcpClient.h  TcpClientDBManager.cpp  TcpClientDBManager.h  TcpClientServiceManager.cpp  TcpClientServiceManager.h  TcpMsgDemarcar.cpp  TcpMsgDemarcar.h  TcpMsgFixedSizeDemarcar.cpp  TcpMsgFixedSizeDemarcar.h  TcpNewConnectionAcceptor.cpp  TcpNewConnectionAcceptor.h  TcpServerController.cpp  TcpServerController.h  network_utils.cpp  network_utils.h  tcp_client.cpp  testapp.cpp
Cpp_ImGui_Desktop/: Clock.hpp  CsvEditor.cpp  Desktop.hpp  FileExplorer.cpp  Paint.hpp  README.md  WindowBase.hpp
Cpp_SDL_OpenGL_FPS/: Actor.cpp  Actor.h  AudioComponent.cpp  AudioComponent.h  AudioSystem.cpp  AudioSystem.h  (+32 more)
LightYears/: CMakeLists.txt
LightYears/LightYearsEngine/: CMakeLists.txt
LightYears/LightYearsEngine/include/: EntryPoint.h
LightYears/LightYearsEngine/include/framework/: Actor.h  Application.h  Core.h  Object.h  World.h
LightYears/LightYearsEngine/src/: EntryPoint.cpp
LightYears/LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  Object.cpp  World.cpp
LightYears/LightYearsGame/: CMakeLists.txt  config.h.in
LightYears/LightYearsGame/include/: config.h
LightYears/LightYearsGame/include/gameFramework/: GameApplication.h
LightYears/LightYearsGame/src/gameFramework/: GameApplication.cpp
bitmap/: Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  ZoomList.h  main.cpp
(+77 files in other folders)
